--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,28 +1,27 @@
-<div class="ui container" >
-  <div class="ui centered grid fade-in one">
-    <div class="centered aligned column about-column">
-        <h3>About Me</h3>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="ui grid">
-            <div class="three wide column"></div>
-            <div class="ten wide column">
-              <img class="ui small left rounded floated image" src="https://imgur.com/9Mc3IiI.png" width="200px" alt="me">
-              <p>Hi, my name is Zubeir Mohamed I am a Data Science and AI Student and Intern as a Software Developer. I started coding {{moment-from-now '2017-08-01'}} and felt in love ever since. My goal is to impact peoples life by solving problems through software and reach the full potential of my creativity. My hobbies are building apps and playing basketball. I mostly use JavaScript for both backend and frontend with React or Ember.js as frameworks but I also like Java and C#. If you want to network and reach out to me, just go to the <a href="/">Home</a> Page and use any social-link you like. LET'S CONNECT 😄</p>
-              <br>
-              <br>
-              {{#link-to "application" class="menu"}}
-               Home
-              {{/link-to}}&nbsp;&nbsp;
-              {{#link-to "projects" class="menu"}}
-               Projects
-              {{/link-to}}&nbsp;&nbsp;  
-              <a class="menu" target="_blank" href="https://drive.google.com/file/d/1BITPcbuyB1LyiXXSN0giwnCbRkraU5zT/view?usp=sharingp">Resume</a>
-            </div>
-            <div class="three wide column"></div>
-        </div>
-    </div>
-  </div>
+<style>
+  #social-links {
+    text-decoration: underline;
+    color: white
+  }
+</style>
+
+<div class="ui content container">
+  <img class="ui small left rounded floated image" src="https://imgur.com/9Mc3IiI.png" width="200px" alt="me">
+  <p>
+    Hi, my name is Zubeir Mohamed I am a Data Science and AI Student at Saarland University and Intern as a
+    Software Engineer at Software AG. I
+    started coding {{moment-from-now "2017-08-01"}} and felt in love ever since. My goal is to impact peoples
+    life by solving problems through software and reach the full potential of my creativity. My hobbies are
+    building apps and playing basketball. I mostly use JavaScript for both backend and frontend with React or
+    Ember.js as frontend-frameworks but I also like to Java and C#. If you want to network and reach out to me,
+    just go to
+    the <a href="/" id="social-links">Home</a> Page and use any social-link you like. LET'S CONNECT 😄
+  </p>
+  <br>
+  {{#link-to "projects" class="ui huge rounded inverted button" id="projectbutton"}}
+    Check out my Projects
+  {{/link-to}}
+  <br>
+  <br>
+  <br>
 </div>
