--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,24 +1,31 @@
-<div class="ui container" >
-  <div class="ui centered grid fade-in one">
-    <div id="main-column" class="centered aligned column">
-      <h1 id="main-heading" class="ui large header">Zubeir Mohamed</h1>
-      <h2 id="sub-header" class="ui header">Student and Software Developer</h2>
-      <a target="_blank" href="mailto:zubeir.mohamed@outlook.de"><img id="icon" src="https://imgur.com/rgQTKmk.png" width="65px" alt="mail_logo"></a>&nbsp;
-      <a target="_blank" href="https://www.linkedin.com/in/zubeir-mohamed-29668217b/"><img id="icon" src="https://imgur.com/TqvrnCr.png" width="65px" alt="twitter_logo"></a>&nbsp;
-      <a target="_blank" href="https://github.com/zubeirtech"><img id="icon" src="https://imgur.com/Bf383A2.png" width="65px" alt="linkedin_logo"></a>&nbsp;
-      <a target="_blank" href="http://twitter.com/zubeirtech"><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
-      <br>
-      <br>
-      {{#link-to "about" class="menu"}}
-        About Me
-      {{/link-to}}&nbsp;&nbsp;
-      {{#link-to "projects" class="menu"}}
-        Projects
-      {{/link-to}}&nbsp;&nbsp;
-      <a href="https://drive.google.com/file/d/1yffPqYv3AbVQ6TXPGkTusTMfdpfZ0vzc/view?usp=sharing" class="menu" target="_blank">
-        Resume
-      </a>
+<div class="ui content container">
+  <h1 class="ui huge inverted header" id="nameheader">
+    Hello, I'm Zubeir Mohamed
+    <div class="sub header" id="subheader">
+      Software Engineer Intern at Software AG - Data Science & AI Student
     </div>
-  </div>
+  </h1>
+  <a target="_blank" rel="noopener" href="mailto:zubeir.mohamed@outlook.de">
+    <img  src="https://imgur.com/rgQTKmk.png" width="60px" alt="mail_logo">
+  </a>
+  &nbsp;
+  <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/zubeir-mohamed-29668217b/">
+    <img  src="https://imgur.com/TqvrnCr.png" width="60px" alt="twitter_logo">
+  </a>&nbsp;
+  <a target="_blank" rel="noopener" href="https://github.com/zubeirtech">
+    <img  src="https://imgur.com/Bf383A2.png" width="60px" alt="linkedin_logo">
+  </a>
+  &nbsp;
+  <a target="_blank" rel="noopener" href="http://twitter.com/zubeirtech">
+    <img src="https://imgur.com/e4ZP8u5.png" width="60px" alt="github_logo">
+  </a>
+  &nbsp;
+  <br>
+  <br>
+  {{#link-to "projects" class="ui huge circular inverted button" id="projectbutton"}}
+    Check out my Projects
+  {{/link-to}}
 </div>
-{{!-- TODO: RESUME LINK!! --}}
+<footer class="ui inverted vertical segment">
+  © 2020 - ZubeirTech
+</footer>
