change cino picture

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -151,7 +151,7 @@
       {{!-- Cinoversity --}}
       <div class="card" id="card">
         <div class="image">
-          <img src="https://imgur.com/Q2LI1jf.png" alt="nile">
+          <img src="https://imgur.com/zMOOQnh.png" alt="nile">
         </div>
         <div class="content">
           <div class="header">CINO - Speaker and Positive Influencer</div>
