--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -159,8 +159,8 @@
           <div class="description">Portfolio Page that basically gives info to Person and Event. Also using mutliple widgets </div>
         </div>
         <div class="extra content">
-          <a href="https://dothemathright.herokuapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/dothemathright" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+          <a href="https://cinoversity.de" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
+          <a href="https://github.com/zubeirtech/cino-webapp" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
     </div>
