--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -13,7 +13,7 @@ body {
 	width: 100wh;
 	height: 90vh;
 	color: #fff;
-	background: linear-gradient(-45deg, black, rgba(152,0,0), rgba(242,242,242), rgba(0,105,0) , rgba(255,255,255));
+	background: linear-gradient(-45deg, black, #eb3349, #bdc3c7,   #614385 , #614385);
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
