--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -21,6 +21,23 @@
     <br>
     <br>
     <div class="ui two stackable linkify cards">
+      {{!--Letterman  --}}
+      <div class="card" id="card">
+        <div class="image">
+          <img src="https://imgur.com/elevMIT.png" alt="letterman">
+        </div>
+        <div class="content">
+          <div class="header">Letterman - Digital Document Manager</div>
+          <div class="meta">Ember.js - Nest.js - MongoDB - Google Vision AI</div>
+          <div class="description">Application that digitize your letters by taking an image and turning the content to text through AI( Image-to-text API ) for the user to read. User can then manage them by label </div>
+        </div>
+        <div class="extra content">
+          
+          <a href="https://letterman.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
+          <a href="https://github.com/zubeirtech/letterman" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+        </div>
+      </div>
+      {{!-- APTOOL --}}
       <div class="card" id="card">
         <div class="image">
           <img src="https://imgur.com/bqv9aeY.png" alt="aptool" >
