change letterman picture

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -24,7 +24,7 @@
       {{!--Letterman  --}}
       <div class="card" id="card">
         <div class="image">
-          <img src="https://imgur.com/elevMIT.png" alt="letterman">
+          <img src="https://imgur.com/fdgm6V3.png" alt="letterman">
         </div>
         <div class="content">
           <div class="header">Letterman - Digital Document Manager</div>
