--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -49,7 +49,7 @@
         </div>
         <div class="extra content">
           
-          <a href="https://aptool.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
+          <a href="https://aptool.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
           <a href="https://github.com/zubeirtech/aptool" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
@@ -65,7 +65,7 @@
         </div>
         <div class="extra content">
           
-          <a href="https://thenile.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
+          <a href="https://nile.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
           <a href="https://github.com/zubeirtech/nile" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="extra content">
           
-          <a href="https://qard-app.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
+          <a href="https://qard.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
           <a href="https://github.com/zubeirtech/qard" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="extra content">
           
-          <a href="https://myidyll.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
+          <a href="https://idyll.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
           <a href="https://github.com/zubeirtech/idyll-client" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
