use right resume, new image, remove text

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -6,15 +6,13 @@
 </style>
 
 <div class="ui content container">
-  <img class="ui small left rounded floated image" src="https://imgur.com/9Mc3IiI.png" width="200px" alt="me">
+  <img class="ui small left rounded floated image" src="/me.jpg" width="200px" alt="me">
   <p>
     Hi, my name is Zubeir Mohamed I am a Data Science and AI Student at Saarland University and Intern as a
     Software Engineer at Software AG. I
     started coding {{moment-from-now "2017-08-01"}} and felt in love ever since. My goal is to impact peoples
     life by solving problems through software and reach the full potential of my creativity. My hobbies are
-    building apps and playing basketball. I mostly use JavaScript for both backend and frontend with React or
-    Ember.js as frontend-frameworks but I also like to Java and C#. If you want to network and reach out to me,
-    just go to
+    building apps and playing basketball.
     the <a href="/" id="social-links">Home</a> Page and use any social-link you like. LET'S CONNECT 😄
   </p>
   <br>
