--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,30 +1,8 @@
-{{!-- <div class="ui container" >
-  <div class="ui centered grid fade-in one">
-    <div id="main-column" class="centered aligned column">
-      <h1 id="main-heading" class="ui large header">Zubeir Mohamed</h1>
-      <h2 id="sub-header" class="ui header">Student and Software Developer</h2>
-      <a target="_blank" href="mailto:zubeir.mohamed@outlook.de"><img id="icon" src="https://imgur.com/rgQTKmk.png" width="65px" alt="mail_logo"></a>&nbsp;
-      <a target="_blank" href="https://www.linkedin.com/in/zubeir-mohamed-29668217b/"><img id="icon" src="https://imgur.com/TqvrnCr.png" width="65px" alt="twitter_logo"></a>&nbsp;
-      <a target="_blank" href="https://github.com/zubeirtech"><img id="icon" src="https://imgur.com/Bf383A2.png" width="65px" alt="linkedin_logo"></a>&nbsp;
-      <a target="_blank" href="http://twitter.com/zubeirtech"><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
-      <br>
-      <br>
-      {{#link-to "about" class="menu"}}
-        About Me
-      {{/link-to}}&nbsp;&nbsp;
-      {{#link-to "projects" class="menu"}}
-        Projects
-      {{/link-to}}&nbsp;&nbsp;
-      <a href="https://drive.google.com/file/d/1yffPqYv3AbVQ6TXPGkTusTMfdpfZ0vzc/view?usp=sharing" class="menu" target="_blank">
-        Resume
-      </a>
-    </div>
-  </div>
-</div> --}}
+
 <style type="text/css">
   @import url('https://fonts.googleapis.com/css?family=Staatliches&display=swap');
   @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
-  @import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
+  @import url('https://fonts.googleapis.com/css?family=Righteous&displays=swap');
 
 
   body {
@@ -153,7 +131,7 @@
       {{#link-to "projects" class="item"}}
         Projects
       {{/link-to}}
-      <a href="https://drive.google.com/file/d/1spekbc_UWWR7XnSx3Il14r2j0VPSY26k/view?usp=sharing" class="item"
+      <a href="/Zubeir_Mohamed_Resume.pdf" class="item"
         target="_blank" rel="noopener">
         Resume
       </a>
