--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -131,8 +131,7 @@
       {{#link-to "projects" class="item"}}
         Projects
       {{/link-to}}
-      <a href="/Zubeir_Mohamed_Resume.pdf" class="item"
-        target="_blank" rel="noopener">
+      <a href="/Zubeir_Mohamed_Resume.pdf" class="item">
         Resume
       </a>
     </div>
