add resume route

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -131,9 +131,9 @@
       {{#link-to "projects" class="item"}}
         Projects
       {{/link-to}}
-      <a href="/Zubeir_Mohamed_Resume.pdf" class="item">
+      {{#link-to "resume" class="item"}}
         Resume
-      </a>
+      {{/link-to}}
     </div>
   </nav>
   {{outlet}}
