--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -27,5 +27,5 @@
   {{/link-to}}
 </div>
 <footer class="ui inverted vertical segment">
-  © 2020 - ZubeirTech
+  © 2020 - ZubeirTech - Black Lives Matter
 </footer>
