new colors and fix image issue

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -3,12 +3,18 @@
     color: white !important;
     font-family: 'Montserrat', sans-serif;
   }
+
   #card {
     border-radius: 10px;
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+
   img {
-    border-radius: 10px!important;
+    border-radius: 10px !important;
+  }
+
+  #letterman {
+    height: 300px !important;
   }
 </style>
 <br>
@@ -24,33 +30,39 @@
       {{!--Letterman  --}}
       <div class="card" id="card">
         <div class="image">
-          <img src="https://imgur.com/fdgm6V3.png" alt="letterman">
+          <img src="https://imgur.com/fdgm6V3.png" alt="letterman" id="letterman">
         </div>
         <div class="content">
           <div class="header">Letterman - Digital Document Manager</div>
           <div class="meta">Ember.js - Nest.js - MongoDB - Google Vision AI</div>
-          <div class="description">Application that digitize your letters by taking an image and turning the content to text through AI( Image-to-text API ) for the user to read. User can then manage them by label </div>
+          <div class="description">Application that digitize your letters by taking an image and turning the content to
+            text through AI( Image-to-text API ) for the user to read. User can then manage them by label </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://letterman.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/letterman" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://letterman.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/letterman" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- APTOOL --}}
       <div class="card" id="card">
         <div class="image">
-          <img src="https://imgur.com/bqv9aeY.png" alt="aptool" >
+          <img src="https://imgur.com/bqv9aeY.png" alt="aptool">
         </div>
         <div class="content">
           <div class="header">Aptool- The Application Process Tool</div>
           <div class="meta">Node.js - Express - PostgreSQL - Ember.js</div>
-          <div class="description">Aptool helps you organize your applications you can also search for jobs within the tool </div>
+          <div class="description">Aptool helps you organize your applications you can also search for jobs within the
+            tool </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://aptool.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/aptool" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://aptool.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/aptool" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- NILE --}}
@@ -61,12 +73,15 @@
         <div class="content">
           <div class="header">The Nile - Video Streaming Plattform</div>
           <div class="meta">Node.js - Express - PostgreSQL - Ember.js</div>
-          <div class="description">This app allows you to publish videos just like youtube or dailymotion. You can also like and comment </div>
+          <div class="description">This app allows you to publish videos just like youtube or dailymotion. You can also
+            like and comment </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://nile.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/nile" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://nile.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/nile" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- QARD --}}
@@ -77,12 +92,15 @@
         <div class="content">
           <div class="header">Qard - The Digital Business Card</div>
           <div class="meta">Node.js - Express - MongoDB - Ember.js</div>
-          <div class="description">Be able to save your socials and share them with a QR-Code, instead of walking around with pieces of paper  </div>
+          <div class="description">Be able to save your socials and share them with a QR-Code, instead of walking around
+            with pieces of paper </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://qard.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/qard" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://qard.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/qard" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- IDYLL --}}
@@ -93,12 +111,15 @@
         <div class="content">
           <div class="header">Idyll - Multiple Sources in one place</div>
           <div class="meta">Node.js - Express - Ember.js</div>
-          <div class="description">A simple resource App that fetches information of multiple api's like reddit, youtube, google trends, news sources and more  </div>
+          <div class="description">A simple resource App that fetches information of multiple api's like reddit,
+            youtube, google trends, news sources and more </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://idyll.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/idyll-client" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://idyll.zubeirtech.dev" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/idyll-client" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- Easynet --}}
@@ -109,12 +130,15 @@
         <div class="content">
           <div class="header">Easynet - A Simple Social Network</div>
           <div class="meta">Node.js - Express - PostgreSQL - Ember.js</div>
-          <div class="description">A simple Social Network where you post and personalize your Account using Express, Postgres and Ember </div>
+          <div class="description">A simple Social Network where you post and personalize your Account using Express,
+            Postgres and Ember </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://easynet.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/server-easynet" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://easynet.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/server-easynet" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- Sentrybills --}}
@@ -125,12 +149,15 @@
         <div class="content">
           <div class="header">Sentrybills - The Best Bill Tracker App</div>
           <div class="meta">Node.js - Express - MongoDB - Ember.js</div>
-          <div class="description">Sentrybills - Awesome Bill tracking App build with Ember.js, Express, mongoose and mongodb  </div>
+          <div class="description">Sentrybills - Awesome Bill tracking App build with Ember.js, Express, mongoose and
+            mongodb </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://sentrybills1.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/sentrybills" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://sentrybills1.firebaseapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/sentrybills" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- My weight journey --}}
@@ -141,12 +168,15 @@
         <div class="content">
           <div class="header">My Weight Journey - Weight Tracker</div>
           <div class="meta">Node.js - Express - MongoDB - Ember.js</div>
-          <div class="description">Simple weight tracking app with graph using ember.js, express, mongoose and mongodb </div>
+          <div class="description">Simple weight tracking app with graph using ember.js, express, mongoose and mongodb
+          </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://myweightjourney.herokuapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/sentrybills" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://myweightjourney.herokuapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/sentrybills" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!--Do the math right  --}}
@@ -157,12 +187,15 @@
         <div class="content">
           <div class="header">DoTheMathRight - the Super-Calculator</div>
           <div class="meta">Ember.js - Math.js</div>
-          <div class="description">One Input field that can calculate, convert or validate your value, powered by Math.js </div>
+          <div class="description">One Input field that can calculate, convert or validate your value, powered by
+            Math.js </div>
         </div>
         <div class="extra content">
-          
-          <a href="https://dothemathright.herokuapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/dothemathright" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+
+          <a href="https://dothemathright.herokuapp.com" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/dothemathright" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
       {{!-- Cinoversity --}}
@@ -173,11 +206,14 @@
         <div class="content">
           <div class="header">CINO - Speaker and Positive Influencer</div>
           <div class="meta">HTML - CSS - JavaScript</div>
-          <div class="description">Portfolio Page that basically gives info to Person and Event. Also using mutliple widgets </div>
+          <div class="description">Portfolio Page that basically gives info to Person and Event. Also using mutliple
+            widgets </div>
         </div>
         <div class="extra content">
-          <a href="https://cinoversity.de" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i>  Visit</a>
-          <a href="https://github.com/zubeirtech/cino-webapp" target="_blank" rel="noopener" class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
+          <a href="https://cinoversity.de" target="_blank" rel="noopener" class={{visitbutton}}><i
+              class="linkify icon"></i> Visit</a>
+          <a href="https://github.com/zubeirtech/cino-webapp" target="_blank" rel="noopener"
+            class="ui circular secondary button"> <i class="github icon"></i> Check the repository</a>
         </div>
       </div>
     </div>
