--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -8,12 +8,12 @@
 <div class="ui content container">
   <img class="ui small left rounded floated image" src="/me.jpg" width="200px" alt="me">
   <p>
-    Hi, my name is Zubeir Mohamed I am a Data Science and AI Student at Saarland University and Intern as a
-    Software Engineer at Software AG. I
+    Hi, my name is Zubeir Mohamed I am a Computer Science student and Intern as a
+    Software Engineer at <a href="https://g.co/kgs/nkx1Y9">Software AG</a>. I
     started coding {{moment-from-now "2017-08-01"}} and felt in love ever since. My goal is to impact peoples
-    life by solving problems through software and reach the full potential of my creativity. My hobbies are
-    building apps and playing basketball.
-    the <a href="/" id="social-links">Home</a> Page and use any social-link you like. LET'S CONNECT 😄
+    life by solving real-world problems through software.
+    Go the <a href="/" id="social-links">Home</a> Page and use any social-link you like to get in contact with me. I'm
+    excited to meet you!
   </p>
   <br>
   {{#link-to "projects" class="ui huge rounded inverted button" id="projectbutton"}}
