--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,18 +2,18 @@
   <h1 class="ui huge inverted header" id="nameheader">
     Hello, I'm Zubeir Mohamed
     <div class="sub header" id="subheader">
-      Software Engineering Intern at Software AG - Data Science & AI Student
+      Software Engineering Intern at Software AG - Computer Science Student
     </div>
   </h1>
   <a target="_blank" rel="noopener" href="mailto:zubeir.mohamed@outlook.de">
-    <img  src="https://imgur.com/rgQTKmk.png" width="60px" alt="mail_logo">
+    <img src="https://imgur.com/rgQTKmk.png" width="60px" alt="mail_logo">
   </a>
   &nbsp;
   <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/zubeir-mohamed-29668217b/">
-    <img  src="https://imgur.com/TqvrnCr.png" width="60px" alt="twitter_logo">
+    <img src="https://imgur.com/TqvrnCr.png" width="60px" alt="twitter_logo">
   </a>&nbsp;
   <a target="_blank" rel="noopener" href="https://github.com/zubeirtech">
-    <img  src="https://imgur.com/Bf383A2.png" width="60px" alt="linkedin_logo">
+    <img src="https://imgur.com/Bf383A2.png" width="60px" alt="linkedin_logo">
   </a>
   &nbsp;
   <a target="_blank" rel="noopener" href="http://twitter.com/zubeirtech">
@@ -27,5 +27,5 @@
   {{/link-to}}
 </div>
 <footer class="ui inverted vertical segment">
-  © 2020 - ZubeirTech - Black Lives Matter
+  © 2020 - ZubeirTech - Stay Healthy!
 </footer>
