--- a/app/templates/resume.hbs
+++ b/app/templates/resume.hbs
@@ -4,12 +4,13 @@
 <br>
 <br>
 <br>
-<a href="/Zubeir_Mohamed_Resume.pdf" style="color: white; background-color: transparent; border: 1px solid transparent; cursor: pointer">
+<a href="/Resume.pdf"
+  style="color: white; background-color: transparent; border: 1px solid transparent; cursor: pointer">
   <i class="external alternate icon"></i> Open Resume
 </a>
 <div class="ui container">
   <br>
-  <embed src="/Zubeir_Mohamed_Resume.pdf" type="application/pdf" width="100%" height="800px">
+  <embed src="/Resume.pdf" type="application/pdf" width="100%" height="800px">
   <br>
   <br>
 </div>
